# DietBot_NutritionAI

./: README.md
backend/: .env  README.md  data.txt  diet.py  elif.py  hhh.py  main.py  nutritionists.txt  ppp.py  prompt.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: chatbot.tsx
frontend/app/login/: page.tsx
